# openz_uss-mirror

./: .gitignore  CLAUDE.md  Makefile  main.py  mkdocs.yml  pyproject.toml
docs/: commandes-git.md  conformite-reglementaire.md  glossaire.md  index.md  macros.py  perspectives.md  points-ouverts.md
docs/architecture/: gestion-incidents.md  index.md  resilience.md
docs/architecture/resilience/: detection-defauts.md  index.md  pannes-et-consequences.md  service-synchronisation.md
docs/javascripts/: nav-dropdown.js
docs/stylesheets/: extra.css
